// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders already seen if already_seen is on subject 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -10,
        },
        Object {
          "scale": 0.8,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        undefined,
        Object {
          "height": 100,
          "width": 100,
        },
        Object {
          "elevation": 1,
        },
      ]
    }
  >
    <Image
      onLoadEnd={[Function]}
      resizeMethod="resize"
      source={
        Object {
          "uri": "blah.jpg",
        }
      }
      style={
        Array [
          undefined,
        ]
      }
    />
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            Array [
              undefined,
            ],
          ]
        }
      >
        ALREADY SEEN!
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders already seen if it was seen this session 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -10,
        },
        Object {
          "scale": 0.8,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        undefined,
        Object {
          "height": 100,
          "width": 100,
        },
        Object {
          "elevation": 1,
        },
      ]
    }
  >
    <Image
      onLoadEnd={[Function]}
      resizeMethod="resize"
      source={
        Object {
          "uri": "blah.jpg",
        }
      }
      style={
        Array [
          undefined,
        ]
      }
    />
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            undefined,
            Array [
              undefined,
            ],
          ]
        }
      >
        ALREADY SEEN!
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders back subject position correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -10,
        },
        Object {
          "scale": 0.8,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        undefined,
        Object {
          "height": 100,
          "width": 100,
        },
        Object {
          "elevation": 1,
        },
      ]
    }
  >
    <Image
      onLoadEnd={[Function]}
      resizeMethod="resize"
      source={
        Object {
          "uri": "blah.jpg",
        }
      }
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`renders front subject position correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
      "top": 0,
      "transform": Array [
        Object {
          "scale": 0.9,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        undefined,
        Object {
          "height": 100,
          "width": 100,
        },
        Object {
          "elevation": 3,
        },
      ]
    }
  >
    <Image
      onLoadEnd={[Function]}
      resizeMethod="resize"
      source={
        Object {
          "uri": "blah.jpg",
        }
      }
      style={
        Array [
          undefined,
        ]
      }
    />
  </View>
</View>
`;
